Fixed fonts and set up sizes and alignment for mobile

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,26 +1,5 @@
 
-@font-face {
-    font-family: 'Inter';
-    src: url('../fonts/Inter-Light-slnt=0.ttf') format('ttf');
-    font-weight: 300;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'Inter';
-    src: url('../fonts/Inter-Medium-slnt=0.ttf') format('ttf');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'Inter';
-    src: url('../fonts/Inter-Bold-slnt=0.ttf') format('ttf');
-    font-weight: bold;
-    font-style: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -31,10 +10,10 @@
 html {
   font-family: 'Inter', sans-serif;
   font-weight: 300;
+  font-size: 32px;  
 }
 
 .quote {
-  position: absolute;
   background-image: url('../images/pattern-quotes.svg');
   background-size: contain;
   background-color: hsl(240, 38%, 20%, 0);
@@ -43,38 +22,38 @@ html {
 }
 
 .photo-container {
-  position: absolute;
-  left: 300px;
-  padding: 25px 25px;
-  width: 300px;
-  height: 300px;
+  position: relative;
+  padding: 8% 10%;
   background-size: contain; 
-  background-image: url('../images/pattern-bg.svg'); 
+  background-image: url('../images/pattern-bg.svg');   
   z-index: -2;  
 }
 
 .photo-image {
   object-fit: cover; 
-  width: 200px; 
-  height: 200px;
+  width: 100%; /*255px mobile*/
+  height: auto;
+  border-radius: 2%;
+  box-shadow: 0 25px 50px -15px rgba(0,0,0,0.5);
   z-index: -1;
 }
 
 .arrows-container { 
   position: absolute;
-  top: 214px;
-  border: solid 1px;
-  width: 60px;
+  top: 86%;
+  left: 37%;
+  width: 33%;
+  height: 13%;
   z-index: 1;
 }
 
 .arrow-previous, .arrow-next {  
-  background-size: 7px 9px;
+  background-size: 8.5px 12px;
   background-position: center;
   background-repeat: no-repeat;
-  width: 26px;
-  height: 18px;
-  border: solid 1px;  
+  background-color: white;
+  width: 40%;
+  height: 100%;  
   display: inline-block;
   margin: 0;
 }
@@ -85,14 +64,33 @@ html {
 }
 
 .arrow-next {
-  background-image: url('../images/icon-next.svg');
-  border-radius: 0 50% 50% 0;
+  background-image: url('../images/icon-prev.svg');
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  border-radius: 50% 0 0 50%;
+  position: relative;
+  left: -11%;
+}
+
+.testimonial-container {
   position: relative;
 }
 
 .testimonial {
-  width: 500px;
-  height: 250px;
+  text-align: center;
+}
+
+.persona {
+  text-align: center;
+  font-weight: 500;
+  font-size: 0.45rem;  
+  line-height: 1.4em;
+}
+
+.prof {
+  color: hsl(240, 18%, 77%);
 }
 
 .curve {
@@ -110,4 +108,37 @@ html {
   background-color: rgba(0,0,0,0.1);
   text-shadow: 2px 2px 2px rgba(0,0,0,0.3);
   color: rgba(0,0,0,0.6);
+  font-size: 0.5rem;
+}
+
+@media screen and (max-width: 501px) {
+  .photo-container {
+    margin: 24px auto;    
+    width: 325px;
+    height: 306px;
+  }
+  
+  .quote {
+    position: absolute;
+    left: calc(50% - 30px);
+    top: -25px;
+  }
+  
+  .testimonial-container {
+    margin: 56px auto 0 auto;
+    width: 83%;   
+    font-size: 0.55rem;   
+    line-height: 1.38em; 
+    color: black;
+  }
+  
+  .persona {
+    margin-top: 19px;
+  }  
+}
+
+@media screen and (min-width: 500px) {
+  .photo-container {
+    position: absolute;
+  }
 }
